--- a/style/styles.css
+++ b/style/styles.css
@@ -442,24 +442,6 @@ footer {
         margin-top: -0.5rem;
         margin-bottom: -0.5rem;
     }
-    .popup-container{
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        flex-direction: column;
-        margin-right: 15px;
-        width: 100%;
-    }
-    .popup-container{
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        flex-direction: column;
-        margin: 0;
-        width: 100%;
-        margin-right: 5px;
-        padding: 5px;
-    }
 }
 
 @media (max-width: 480px) {
@@ -515,11 +497,8 @@ footer {
     .grid-container ul{
         font-size: 0.8rem;
     }
-    .popup-container{
-        display: none;
-    }
-    .popup-container:active {
-        display: flex;
+    .popup-content{
+        font-size: 0.6rem;
     }
     .popup-content p{
         font-size: 0.6rem;
