--- a/style/styles.css
+++ b/style/styles.css
@@ -445,12 +445,16 @@ footer {
 }
 
 @media (max-width: 480px) {
+    *{
+        margin-top:-10px;
+        margin-left: -20px;
+        font-size: 1rem;
+    }
     body{
         display: flex;
         align-items: center;
         justify-content: center;
         flex-direction: column;
-        margin-left: -20px;
     }
     .grid-container {
         display: flex;
@@ -487,9 +491,6 @@ footer {
         font-size: 1rem; /* Adjust font size for mobile */
         padding-left: 0.8rem;
         padding-right: 0.8rem;
-    }
-    .site-description p{
-        font-size: 1rem;
     }
     .content h1{
         font-size: 2rem;
