--- a/style/styles.css
+++ b/style/styles.css
@@ -3,6 +3,7 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    font-family: 'IvyStyle TW', sans-serif;
 }
 
 body {
@@ -445,12 +446,9 @@ footer {
 }
 
 @media (max-width: 480px) {
-    *{
-        margin-top:-10px;
-        margin-left: -20px;
-        font-size: 1rem;
-    }
     body{
+        margin-left: -5px;
+        margin-top: 5px;
         display: flex;
         align-items: center;
         justify-content: center;
@@ -463,7 +461,6 @@ footer {
         flex-direction: column;
     }
     .slider-container {
-        margin: 0;
         margin-top: 10px;
         display: flex;
         align-items: center;
