--- a/style/styles.css
+++ b/style/styles.css
@@ -616,17 +616,6 @@ footer {
         font-size: 0.65rem;
     }
     footer {
-        margin: 0;
-        margin-top: 20px;
-    }
-    footer .column{
-        display:flex;
-        flex-direction: column;
-        width: 280px;
-        text-align: center;
-        margin-top: 10px;
-    }
-    .column ul li{
-        margin-left: -20px;
+        display: none;
     }
 }
