--- a/style/styles.css
+++ b/style/styles.css
@@ -10,7 +10,7 @@ body {
     background-color: #282c34;
     color: #f0f0f0;
     line-height: 1.6;
-    overflow-x: none;
+    overflow-x: hidden;
     margin: 20px;
 }
 
@@ -40,8 +40,8 @@ body {
     font-size: 2.3rem;
     color: #f0f0f0;
     text-align: center;
-    padding-left: 13rem;
-    padding-right: 13rem;
+    padding-left: 12.5rem;
+    padding-right: 12.5rem;
     padding-top: -5rem;
     margin-bottom: 10px;
    
